--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,12 @@
 body {
     padding-top: 70px;
 }
+
+.product-name {
+    width: 80%;
+}
+
+.product-price {
+    width: 20%;
+    text-align: center;
+}
