--- a/webapp/css/custom.css
+++ b/webapp/css/custom.css
@@ -10,3 +10,9 @@ body {
     width: 20%;
     text-align: center;
 }
+
+footer {
+    margin-top: 40px;
+    padding-top: 15px;
+    border-top: 1px solid #ddd;
+}
